[package]
name = "roboxide"
version = "0.1.0"
authors = ["Austen LeBeau"]
edition = "2018"

[lib]
name = "roboxide"
path = "src/lib/lib.rs"

[[bin]]
name = "rxcore"
path = "src/core.rs"

[[bin]]
name = "node1"
path = "src/node1.rs"

[[bin]]
name = "node2"
path = "src/node2.rs"

[[bin]]
name = "node3"
path = "src/node3.rs"

[dependencies]
zmq = "0.9"
bincode = "1.3.1"
serde = {version = "1.0.117", features = ["derive"]}