[package]
name = "roboxide"
version = "0.1.0"
authors = ["Austen LeBeau"]
edition = "2018"

[dependencies]
zmq = "0.9"
bincode = "1.3.1"
serde = {version = "1.0.117", features = ["derive"]}

[lib]
name = "roboxide"
path = "src/lib/lib.rs"

[[bin]]
name = "rxcore"
path = "src/core.rs"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/subscriber.rs"